--- a/style.css
+++ b/style.css
@@ -44,6 +44,9 @@
 
 }
 
+h2 h3 {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
 .container-parallax1,
 .container-parallax2,
@@ -58,29 +61,182 @@
 }
 
 .container-parallax1 {
-
+    text-align: center;
     background-image: url("arquivos-do-projeto/parallax-imagem1.png");
-
     height: 100vh;
+
 }
 
 .container-parallax1 h1 {
     position: absolute;
-    top: 45%;
-    left: 0;
+    top: 50%;
+    left: 25%;
     right: 0;
     width: 100vh;
     color: aliceblue;
     text-align: center;
-    font-size: 50px;
+    font-size: 60px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-shadow: black;
     filter: drop-shadow(10px 5px 4px #000000);
+    margin: 0 auto;
+
 }
 
 
-.container-texto {
 
+.container-texto {
+    background-color: rgb(255, 255, 255);
     max-width: 1024px;
     padding: 0px 20px;
+    text-align: center;
+    width: 100%;
+    margin: auto;
+    padding: 80px;
+    font-size: 20px;
+    line-height: 30px;
+    color: #604829;
+}
+
+.container-parallax2 {
+    background-image: url(arquivos-do-projeto/parallax-imagem2.jpg);
+    background-color: aqua;
+    height: 50vh;
+    text-align: center;
+    padding: 40px;
+
+}
+
+.container-parallax2 h3 {
+    font-style: italic;
+    font-size: 24px;
+    color: white;
+    box-shadow: black;
+    background-color: #604829;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    padding: 20px;
+    margin: 0 auto;
+    width: 500px;
+}
+
+
+.container-parallax3 {
+    background-image: url(arquivos-do-projeto/parallax-imagem3.jpg);
+    height: 50vh;
+    width: 100%;
+    text-align: center;
+    padding: 40px;
+
+
+}
+
+.container-parallax3 h3 {
+    font-style: italic;
+    font-size: 24px;
+    color: white;
+    box-shadow: black;
+    background-color: #604829;
+    position: absolute;
+    padding: 10px;
+    top: 45%;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+    width: 500px;
+}
+
+
+
+.container-parallax4 {
+    text-align: center;
+    padding: 40px;
+    height: 100vh;
+    background-image: url(arquivos-do-projeto/parallax-imagem4.png);
+
+}
+
+.container-parallax4 h2 {
+    position: relative;
+    font-size: 30px;
+    color: white;
+    box-shadow: black;
+    background-color: #604829;
+    width: 500px;
+    top: 10%;
+    margin: 0 auto;
+    padding: 10px;
+
+}
+
+
+.container-parallax4 iframe {
+    position: absolute;
+    width: 1024px;
+    height: 450px;
+    top: 25%;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+}
+
+
+h2 {
+
+    padding: 40px;
+}
+
+.container-contatos {
+
+    width: 500px;
+    padding: 10px;
+    position: absolute;
+    bottom: 8%;
+    right: 0;
+    left: 0;
+    margin: auto;
+    background-color: #604829;
+    color: aliceblue;
+}
+
+.container-parallax5 {
+    background-image: url(arquivos-do-projeto/cafeteria.jpg);
+    color: white;
+    text-align: center;
+    height: 85vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 10%;
+}
+
+.container-horarios {
+    line-height: 40px;
+    display: inline;
+    position: relative;
+    margin: 0 auto;
+}
+
+.container-horarios li {
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 600px;
+    margin: 10px auto;
+    border-bottom: 1px solid rgb(255, 255, 255);
+}
+
+.container-horarios h2 {
+    position: absolute;
+    top: 20%;
+    right: 0;
+    left: 0;
+}
+
+.container-rodape {
+    color: white;
+    text-align: center;
+    background-color: #7a6536;
+    padding: 10px;
 }
